# Remote_3D-printer_control_system

./: .gitignore  README.md  model.gcode
FPGA/: .gitignore  3D_printer_control_system.qpf  3D_printer_control_system.qsf  3D_printer_control_system.v  3D_printer_control_system_assignment_defaults.qdf  adc_control.sopcinfo  hps_sdram_p0_summary.csv  printer_system.asm.rpt.htm  printer_system.eda.rpt.htm  printer_system.fit.rpt.htm  printer_system.flow.rpt.htm  printer_system.map.rpt.htm  printer_system.qpf  printer_system.qsf  printer_system.sld  printer_system.sta.rpt.htm  printer_system.sv  printer_system.v  printer_system_assignment_defaults.qdf  soc_system.sopcinfo
HPS/: Body3.stl  C.stl  CFFFP_Body3.gcode  CFFFP_Cub.gcode  Makefile  file.txt  (+3 more)
HPS/control_system/: .gitignore  CMakeLists.txt  main.cpp  settings.json  settings.txt
HPS/control_system/mechanics/: HPS_HEADER.h
HPS/control_system/mechanics/Controller/: Commands.cpp  GCODE_CODES.h  MechanicsController.cpp  MechanicsController.h
HPS/control_system/mechanics/Controller/Kinematic/: Kinematic.cpp  Kinematic.h
HPS/control_system/mechanics/Controller/Kinematic/Motors/: Motor.cpp  Motor.h
HPS/control_system/printer/: configuration.h  dict.h  types.h
HPS/control_system/printer/Controller/: GCodeCommands.cpp  PrinterController.cpp  PrinterController.h  ServerCommands.cpp  json.h
HPS/control_system/printer/FileManager/: FileManager.cpp
HPS/control_system/printer/GCodeParser/: GCodeParser.cpp  GCodeParser.h
HPS/server/sublime/: CMakeLists.txt  Common.c  Common.h  Makefile  index.html  tcpserver.c
(+255 files in other folders)
